--- a/ll-bootstrap/levels-dashboard.html
+++ b/ll-bootstrap/levels-dashboard.html
@@ -35,7 +35,7 @@
     <div class="navbar top-bar">
         <div class="container top-bar__container">
             <a href="levels-dashboard.html" class="navbar-brand d-flex align-items-center">
-            <img class="gn-i me-3 temp-icon" src="temp-icon-sonobe.svg">
+            <img class="gn-i me-3 temp-icon" src="logo-logiclearner-bw.svg">
             <span>Logic Learner</span>
             </a>
 
@@ -64,7 +64,7 @@
     <header class="main-banner banner-hero">
         <div class="container d-flex justify-content-center banner-hero__container">
             <figure class="main-banner__avatar banner-hero__avatar align-self-center" aria-hidden="true">
-                <img src="temp-icon-sonobe.svg">
+                <img src="logo-logiclearner.svg">
             </figure>
             <h1 class="align-self-center">
                 <span class="main-banner__title banner-hero__title">Logic Learner</span>
@@ -103,16 +103,16 @@
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
                     <div class="cardset-card__subhead">Tutorial</div>
                     <div class="cardset-card__title level-name"><a href="tutorial.html">Using Logic Learner</a></div>
-                    <div class="cardset-card__text">Learn how to use the tool</div>
+                    <div class="cardset-card__text">Learn how to use Logic Learner.</div>
                 </div>
                 <div class="cardset-card__prompt ms-auto"><a href="questions-dashboard.html">&rsaquo;</a></div>
             </li>
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="avatar-level-1.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
-                    <div class="cardset-card__subhead">Level I</div>
+                    <div class="cardset-card__subhead">Level 1</div>
                     <div class="cardset-card__title level-name"><a href="questions-dashboard.html">Novice</a></div>
-                    <div class="cardset-card__text">Easy peasy, get a handle on things</div>
+                    <div class="cardset-card__text">Let’s get a handle on the basics of propositional logic.</div>
                 </div>
                 <div class="cardset-card__status-count" aria-label="Questions completed"><a href="questions-dashboard.html">9/10</a></div>
                 <div class="cardset-card__prompt"><a href="questions-dashboard.html">&rsaquo;</a></div>
@@ -120,9 +120,9 @@
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="avatar-level-2.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
-                    <div class="cardset-card__subhead">Level II</div>
+                    <div class="cardset-card__subhead">Level 2</div>
                     <div class="cardset-card__title level-name">Learner</div>
-                    <div class="cardset-card__text">Next level up, time to grow!</div>
+                    <div class="cardset-card__text">Apply the basics, time to level up!</div>
                 </div>
                 <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
                 <div class="cardset-card__prompt">&rsaquo;</div>
@@ -130,9 +130,9 @@
             <li class="cardset-card">
                 <figure class="cardset-card__avatar"><img src="avatar-level-3.svg"></figure>
                 <div class="d-flex flex-column align-self-center me-2 me-lg-0">
-                    <div class="cardset-card__subhead">Level II</div>
+                    <div class="cardset-card__subhead">Level 3</div>
                     <div class="cardset-card__title level-name">Apprentice</div>
-                    <div class="cardset-card__text">Onward, smarty pants!</div>
+                    <div class="cardset-card__text">Moving onward, challenge yourself.</div>
                 </div>
                 <div class="cardset-card__status-count" aria-label="Questions completed">9/10</div>
                 <div class="cardset-card__prompt">&rsaquo;</div>
@@ -199,8 +199,18 @@
             <a href="/contact/" title="Contact us">Contact Us</a>
         </li>
     </ul>
-    <p class="ll-license text-center mt-3 fs-6">Logic Learner open-source code is on <a itemprop="license" rel="license noopener noreferrer" href="https://github.com/ccnmtl/logiclearner">Github</a> with <a itemprop="license" rel="license noopener noreferrer" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a> license.</p>
-    <div itemscope itemtype="http://schema.org/EducationalOrganization" class='text-center'><a href="http://ctl.columbia.edu" rel="noopener noreferrer" target="_blank" itemprop="url" class='d-inline-block'><img src="logo-ctl.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name">Center for Teaching and Learning at Columbia University</span></a></div>
+    <p class="ll-license text-center mt-3 fs-6">Logic Learner open-source code is on <a itemprop="license" rel="license noopener noreferrer" href="https://github.com/ccnmtl/logiclearner">Github</a> <span class="text-nowrap">with <a itemprop="license" rel="license noopener noreferrer" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a> license.</span></p>
+    <div class="row my-5">
+        <div itemscope itemtype="http://schema.org/EducationalOrganization" class='col-12 col-md-6 text-center text-md-end pe-md-5 py-3'>
+            <a href="https://ctl.columbia.edu" rel="noopener noreferrer" target="_blank" itemprop="url"><img src="logo-ctl.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name">Center for Teaching and Learning at Columbia University</span></a>
+        </div>
+        <div itemscope itemtype="http://schema.org/EducationalOrganization" class='col-12 col-md-6 text-center text-md-start ps-md-5 py-3'>
+            <a href="https://cs.columbia.edu" rel="noopener noreferrer" target="_blank" itemprop="url"><img src="logo-cs.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name">Computer Science Department at Columbia University</span></a>
+        </div>
+        <div itemscope itemtype="http://schema.org/EducationalOrganization" class='col-12 text-center py-3 py-md-5'>
+            <a href="https://www.engineering.columbia.edu/" rel="noopener noreferrer" target="_blank" itemprop="url"><img src="logo-cuseas.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name"> The Fu Foundation School of Engineering and Applied Science at Columbia University</span></a>
+        </div>
+    </div>
 
     </div>
 </footer>
