--- a/ll-bootstrap/questions-dashboard.html
+++ b/ll-bootstrap/questions-dashboard.html
@@ -35,20 +35,20 @@
     <div class="navbar top-bar">
         <div class="container top-bar__container">
             <a href="levels-dashboard.html" class="navbar-brand d-flex align-items-center">
-            <img class="gn-i me-3 temp-icon" src="temp-icon-sonobe.svg">
+            <img class="gn-i me-3 temp-icon" src="logo-logiclearner-bw.svg">
             <span>Logic Learner</span>
             </a>
 
             <ul class="nav col-auto top-bar__nav">
                 <li>
-                  <a href="levels-dashboard.html" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="temp-icon-home.svg">
-                    Home
+                  <a href="tutorial.html" class="nav-link">
+                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="icon-tutorial.svg">
+                    Tutorial
                   </a>
                 </li>
                 <li>
                   <a href="levels-dashboard.html" class="nav-link">
-                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="temp-icon-grid.svg">
+                    <img class="gn-i d-block mx-auto mb-1 temp-icon" src="icon-grid.svg">
                     Levels
                   </a>
                 </li>
@@ -64,12 +64,12 @@
     <header class="main-banner">
         <div class="container d-flex justify-content-start">
             <figure class="main-banner__avatar align-self-center" aria-hidden="true">
-                <img src="sonobe-i.svg">
+                <img src="avatar-level-1.svg">
             </figure>
-            <h1 class="align-self-center">
-                <span class="main-banner__subhead">LEVEL I</span>
+            <h1 class="align-self-center pe-3">
+                <span class="main-banner__subhead">LEVEL 1</span>
                 <span class="main-banner__title">Novice</span>
-                <span class="main-banner__text">Some descriptive text here</span>
+                <span class="main-banner__text">Let’s get a handle on the basics of propositional logic.</span>
             </h1>
             <div class="ms-auto fs-4 q-completion align-self-center" aria-label="Questions completed">
                 9/10
@@ -227,8 +227,18 @@
             <a href="/contact/" title="Contact us">Contact Us</a>
         </li>
     </ul>
-    <p class="ll-license text-center mt-3 fs-6">Logic Learner open-source code is on <a itemprop="license" rel="license noopener noreferrer" href="https://github.com/ccnmtl/logiclearner">Github</a> with <a itemprop="license" rel="license noopener noreferrer" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a> license.</p>
-    <div itemscope itemtype="http://schema.org/EducationalOrganization" class='text-center'><a href="http://ctl.columbia.edu" rel="noopener noreferrer" target="_blank" itemprop="url" class='d-inline-block'><img src="logo-ctl.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name">Center for Teaching and Learning at Columbia University</span></a></div>
+    <p class="ll-license text-center mt-3 fs-6">Logic Learner open-source code is on <a itemprop="license" rel="license noopener noreferrer" href="https://github.com/ccnmtl/logiclearner">Github</a> <span class="text-nowrap">with <a itemprop="license" rel="license noopener noreferrer" href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a> license.</span></p>
+    <div class="row my-5">
+        <div itemscope itemtype="http://schema.org/EducationalOrganization" class='col-12 col-md-6 text-center text-md-end pe-md-5 py-3'>
+            <a href="https://ctl.columbia.edu" rel="noopener noreferrer" target="_blank" itemprop="url"><img src="logo-ctl.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name">Center for Teaching and Learning at Columbia University</span></a>
+        </div>
+        <div itemscope itemtype="http://schema.org/EducationalOrganization" class='col-12 col-md-6 text-center text-md-start ps-md-5 py-3'>
+            <a href="https://cs.columbia.edu" rel="noopener noreferrer" target="_blank" itemprop="url"><img src="logo-cs.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name">Computer Science Department at Columbia University</span></a>
+        </div>
+        <div itemscope itemtype="http://schema.org/EducationalOrganization" class='col-12 text-center py-3 py-md-5'>
+            <a href="https://www.engineering.columbia.edu/" rel="noopener noreferrer" target="_blank" itemprop="url"><img src="logo-cuseas.svg" class="footer__logo img-fluid" alt="" itemprop="logo" /><span class="visually-hidden" itemprop="name"> The Fu Foundation School of Engineering and Applied Science at Columbia University</span></a>
+        </div>
+    </div>
 
     </div>
 </footer>
